[package]
name = "kaobot"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["KaoBot"]
description = "Telegram expense tracker bot for family use"

[[bin]]
name = "kaobot"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.17", default-features = false, features = ["ctrlc_handler", "macros", "rustls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
regex = "1"
base64 = "0.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
